--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "todo-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha server/**/*.test.js",
-      "test-watch": "nodemon --exec 'npm test'"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.17.2",
-    "expect": "^1.20.2",
-    "express": "^4.15.3",
-    "mocha": "^3.4.2",
-    "mongodb": "^2.2.30",
-    "mongoose": "^4.11.4",
-    "nodemon": "^1.11.0",
-    "supertest": "^3.0.0"
-  }
+    "name": "todo-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node server/server.js",
+        "test": "mocha server/**/*.test.js",
+        "test-watch": "nodemon --exec 'npm test'"
+    },
+    "engines": {
+        "node": "8.2.1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.17.2",
+        "expect": "^1.20.2",
+        "express": "^4.15.3",
+        "lodash": "^4.17.4",
+        "mocha": "^3.4.2",
+        "mongodb": "^2.2.30",
+        "mongoose": "^4.11.4",
+        "nodemon": "^1.11.0",
+        "supertest": "^3.0.0"
+    }
 }
