--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.17.2",
+        "crypto-js": "^3.1.9-1",
         "expect": "^1.20.2",
         "express": "^4.15.3",
+        "jsonwebtoken": "^7.4.1",
         "lodash": "^4.17.4",
         "mocha": "^3.4.2",
         "mongodb": "^2.2.30",
         "mongoose": "^4.11.4",
         "nodemon": "^1.11.0",
-        "supertest": "^3.0.0"
+        "supertest": "^3.0.0",
+        "validator": "^8.0.0"
     }
 }
